@startuml MLD_Unitee
!theme plain
skinparam linetype ortho

title MLD - UNITEE Veille Marchés Publics

' ============================================================
' TABLES MÉTIER
' ============================================================

entity sources {
  *id_source : INT (PK)
  --
  nom_source : VARCHAR(100) UNIQUE NOT NULL
  type_source : ENUM(API, SCRAPING, FLUX_RSS)
  url_base : VARCHAR(500)
  actif : BOOLEAN
  date_creation : DATETIME
}

entity acheteurs {
  *id_acheteur : INT (PK)
  --
  nom_acheteur : VARCHAR(255) UNIQUE NOT NULL
  type_acheteur : ENUM(COLLECTIVITE, ETAT, ENTREPRISE_PUBLIQUE)
  region : VARCHAR(100)
  contact_email : VARCHAR(255)
  contact_phone : VARCHAR(20)
  date_creation : DATETIME
}

entity mots_cles {
  *id_mot_cle : INT (PK)
  --
  mot_cle : VARCHAR(100) UNIQUE NOT NULL
  categorie : ENUM(PRIMARY, SECONDARY, EXTRACTED)
  pertinence : INT (0-100)
  date_creation : DATETIME
}

entity annonces {
  *id_annonce : BIGINT (PK)
  #id_source : INT (FK → sources)
  #id_acheteur : INT (FK → acheteurs)
  --
  id_externe : VARCHAR(100) NOT NULL
  titre : VARCHAR(500) NOT NULL
  resume : TEXT
  description : LONGTEXT
  montant_estime : DECIMAL(15,2)
  devise : VARCHAR(3)
  date_publication : DATETIME NOT NULL
  date_limite_reponse : DATETIME NOT NULL
  localisation : VARCHAR(255)
  region : VARCHAR(100)
  lien_source : TEXT UNIQUE
  statut : ENUM(NOUVEAU, QUALIFIE, IGNORE, REPONDU)
  timestamp_import : DATETIME
  timestamp_maj : DATETIME
  -- UNIQUE(id_source, id_externe)
}

' Table d'association N:N
entity annonce_mot_cle {
  *id_annonce : BIGINT (PK, FK → annonces)
  *id_mot_cle : INT (PK, FK → mots_cles)
  --
  score_pertinence : INT (0-100)
  type_extraction : ENUM(REGEX, TF-IDF, MANUEL, LLM)
  date_extraction : DATETIME
}

' ============================================================
' TABLES DE QUALIFICATION
' ============================================================

entity scores_pertinence {
  *id_score : INT (PK)
  #id_annonce : BIGINT UNIQUE (FK → annonces)
  --
  score_pertinence : INT NOT NULL (0-100)
  niveau_alerte : ENUM(CRITIQUE, URGENT, NORMAL, IGNORE)
  raison_scoring : TEXT
  bonus_keywords : INT
  bonus_montant : INT
  bonus_deadline : INT
  bonus_acheteur : INT
  date_calcul : DATETIME
  date_maj : DATETIME
}

entity notifications {
  *id_notification : BIGINT (PK)
  #id_annonce : BIGINT (FK → annonces)
  --
  type_alerte : VARCHAR(50) NOT NULL
  statut : ENUM(NOUVEAU, ENVOYE, ACQUITTE, ARCHIVE)
  priorite : INT (1-5)
  message : LONGTEXT
  date_creation : DATETIME
  date_envoi : DATETIME
  date_acquittement : DATETIME
}

' ============================================================
' TABLES TECHNIQUES (AUDIT & LOGS)
' ============================================================

entity log_technique {
  *id_log_tech : BIGINT (PK)
  --
  timestamp : DATETIME NOT NULL
  type_operation : VARCHAR(100)
  source_operation : VARCHAR(100)
  statut : ENUM(OK, WARNING, ERREUR)
  message : TEXT
  details_json : JSON
  duree_ms : INT
}

entity log_metier {
  *id_log_metier : BIGINT (PK)
  #id_annonce : BIGINT (FK → annonces)
  --
  timestamp : DATETIME NOT NULL
  type_operation : VARCHAR(100)
  utilisateur : VARCHAR(255)
  description : TEXT
  avant_etat : JSON
  apres_etat : JSON
}

entity historique_annonces {
  *id_historique : BIGINT (PK)
  #id_annonce : BIGINT (FK → annonces)
  --
  timestamp : DATETIME NOT NULL
  type_modification : VARCHAR(100)
  colonne_modifiee : VARCHAR(100)
  valeur_ancienne : TEXT
  valeur_nouvelle : TEXT
}

entity log_sauvegardes {
  *id_log_sauvegarde : INT (PK)
  --
  timestamp : DATETIME NOT NULL
  type_sauvegarde : ENUM(COMPLETE, INCREMENTALE)
  fichier : VARCHAR(500)
  statut : ENUM(OK, ERREUR)
  taille_fichier : BIGINT
  duree_secondes : INT
  message_erreur : TEXT
}

' ============================================================
' RELATIONS (cardinalités MLD)
' ============================================================

sources ||--o{ annonces : "id_source"
acheteurs ||--o{ annonces : "id_acheteur"

annonces ||--o{ annonce_mot_cle : "id_annonce"
mots_cles ||--o{ annonce_mot_cle : "id_mot_cle"

annonces ||--|| scores_pertinence : "id_annonce (1:1)"
annonces ||--o{ notifications : "id_annonce"
annonces ||--o{ log_metier : "id_annonce"
annonces ||--o{ historique_annonces : "id_annonce"

note bottom
  Légende :
  * = Clé primaire (PK)
  # = Clé étrangère (FK)
  RESTRICT = suppression bloquée si enfants existent
  CASCADE = suppression propagée aux enfants
  UNIQUE(id_source, id_externe) = détection doublons
end note

@enduml
